home image needs fixing

--- a/index.html
+++ b/index.html
@@ -99,11 +99,8 @@
 		
 		<!--Home-->
 		<section id="home" class="home home-particles">
-			<div class="logo_container" id="logo-wrapper">
-				<div id="logo_back" class="fadeIn"></div>
-				<div id="logo_mid" class="fadeIn"></div>
-				<div id="logo_front" class="fadeIn"></div>
-			</div>
+			
+				<img href="img/logo.svg" class="dfrost-logo">
 			
 				
 			
