--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
 					<div id="date">18 &amp; 19 March</div>
 					<div id="venue">National Institute of Design, Bangalore</div>
 				</div>	
+			</div>
 
-
-				<!-- <div class="date">
+					<!-- <div class="date">
 					<a>
 						
 						<div>
@@ -141,7 +141,27 @@
 				   		<span>Schedule</span>
 			   		</a>
 			   	</div> --> 
+
+			<!-- Countdown Timer -->
+			<div id="clockdiv">
+			  <div>
+			    <span class="days"></span>
+			    <div class="smalltext">Days</div>
+			  </div>
+			  <div>
+			    <span class="hours"></span>
+			    <div class="smalltext">Hours</div>
+			  </div>
+			  <div>
+			    <span class="minutes"></span>
+			    <div class="smalltext">Minutes</div>
+			  </div>
+			  <div>
+			    <span class="seconds"></span>
+			    <div class="smalltext">Seconds</div>
+			  </div>
 			</div>
+			<!-- Countdown Timer ends -->
 		</section>
 		<!-- /Home -->
 
