--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>NID Dfrost | March 18-19, 2017</title>
-
+	<link rel="icon" type="image/ico" href="../img/favicon_dfrost.png">
 	<!-- Bootstrap and MDB import -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">  -->
