--- a/index.html
+++ b/index.html
@@ -379,23 +379,27 @@
 		    	</div>
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
-		    		<div class="day1">
+		    		<div class="day11">
 		    			<h3>WORKSHOP TITLE</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day1">
+		    		<div class="day12">
 		    			<h3>WORKSHOP TITLE</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day1">
+		    		<div class="day13">
 		    			<h3>WORKSHOP TITLE</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day2">
+		    		<div class="day21">
 		    			<h3>WORKSHOP TITLE</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day2">
+		    		<div class="day22">
+		    			<h3>WORKSHOP TITLE</h3>
+		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    		</div>
+		    		<div class="day23">
 		    			<h3>WORKSHOP TITLE</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
