minor css changes for home page
few silly changes

--- a/index.html
+++ b/index.html
@@ -111,32 +111,34 @@
 				<div class="register_btn"><a href="#">REGISTER NOW</a></div>
 					
 				<div>
-					<p>Ticket sale ends by 09:00 PM, 16 Mar, 2017</p>
 					<div id="date">18 &amp; 19 March</div>
 					<div id="venue">National Institute of Design, Bangalore</div>
+					<div class="ticket_sale">
+						<p>Grab your tickets by</p>
+						<!-- Countdown Timer -->
+						<div id="clockdiv">
+							  <div>
+							    <span class="days"></span>
+							    <div class="smalltext">Days</div>
+							  </div>
+							  <div>
+							    <span class="hours"></span>
+							    <div class="smalltext">Hours</div>
+							  </div>
+							  <div>
+							    <span class="minutes"></span>
+							    <div class="smalltext">Minutes</div>
+							  </div>
+							  <div>
+							    <span class="seconds"></span>
+							    <div class="smalltext">Seconds</div>
+							  </div>
+						</div>
+						<!-- Countdown Timer ends -->
+					</div>
 				</div>
 			</div>
-			<!-- Countdown Timer -->
-			<div id="clockdiv">
-			  <div>
-			    <span class="days"></span>
-			    <div class="smalltext">Days</div>
-			  </div>
-			  <div>
-			    <span class="hours"></span>
-			    <div class="smalltext">Hours</div>
-			  </div>
-			  <div>
-			    <span class="minutes"></span>
-			    <div class="smalltext">Minutes</div>
-			  </div>
-			  <div>
-			    <span class="seconds"></span>
-			    <div class="smalltext">Seconds</div>
-			  </div>
-
-			</div>
-			<!-- Countdown Timer ends -->
+			
 		</section>
 		<!-- /Home -->
 
