--- a/index.html
+++ b/index.html
@@ -177,18 +177,23 @@
 		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
+			    				<span class="time">10:30 AM - 01:00 PM</span>
 			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth &amp; team</span>
+			    				<span class="low">CS Susanth/Jigna &amp; team</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">11:30</span>
-			    				<span class="high lab">Graphic Design</span>
+			    				<span class="time">11:00 AM - 01:00 PM</span>
+			    				<span class="high lab">Visual Art</span>
 			    				<span class="low">Gregor Strutz, INKL GmbH</span>
 		    				</div>
+		    				<div class="event_ls">			    				
+			    				<span class="time">02:00 PM - 04:00 PM</span>
+			    				<span class="high lab">Hands on Bamboo</span>
+			    				<span class="low">CS Susanth/Jigna &amp; team</span>
+		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">14:30</span>
-			    				<span class="high lab">TBA</span>
+			    				<span class="time">02:00 PM - 04:00 PM</span>
+			    				<span class="high lab">Mapbox</span>
 			    				<span class="low">TBA</span>
 		    				</div>
 		    			</div>
@@ -197,24 +202,24 @@
 		    					<span class="left">dTalks</span><span class="sep">|</span><span class="right">Twenty-minute TED style talks</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high tlk">SOME D00D</span>
+			    				<span class="time">06:00 PM - 06:20 PM</span>
+			    				<span class="high tlk">Mark Skaggs</span>
 			    				<span class="low">Co-creator, Farmville</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">11:30</span>
-			    				<span class="high tlk">Sankia Malik</span>
+			    				<span class="time">06:20 PM - 06:40 PM</span>
+			    				<span class="high tlk">Sania Malik</span>
 			    				<span class="low">Branding</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">14:30</span>
-			    				<span class="high tlk">TBA</span>
-			    				<span class="low">TBA</span>
+			    				<span class="time">06:40 PM - 07:00 PM</span>
+			    				<span class="high tlk">Vilas Nayak</span>
+			    				<span class="low">Speed Art</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Workshops</span>
+		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Culturals</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">16:30</span>
@@ -246,19 +251,19 @@
 		    					<span class="left">dLabs</span><span class="sep">|</span><span class="right">Workshops</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth &amp; team</span>
+			    				<span class="time">11:00 AM - 01:00 PM</span>
+			    				<span class="high lab">Design Sprint</span>
+			    				<span class="low">Sures Kumar</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">11:30</span>
-			    				<span class="high lab">Graphic Design</span>
-			    				<span class="low">Gregor Strutz, INKL GmbH</span>
+			    				<span class="time">11:00 AM - 01:00 PM</span>
+			    				<span class="high lab">Biomimicry</span>
+			    				<span class="low">Seema Anand &amp; Prashant Dhawan</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">14:30</span>
-			    				<span class="high lab">TBA</span>
-			    				<span class="low">TBA</span>
+			    				<span class="time">02:00 PM - 04:00 PM</span>
+			    				<span class="high lab">Paper Workshop</span>
+			    				<span class="low">Arun Desai</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -266,24 +271,24 @@
 		    					<span class="left">dTalks</span><span class="sep">|</span><span class="right">Twenty-minute TED style talks</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">09:30</span>
-			    				<span class="high tlk">SOME D00D</span>
-			    				<span class="low">Co-creator, Farmville</span>
+			    				<span class="time">06:00 PM - 06:20 PM</span>
+			    				<span class="high tlk">Saurabh Shrivastava</span>
+			    				<span class="low">Research Scientist, Conduent Labs</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">11:30</span>
-			    				<span class="high tlk">Sankia Malik</span>
-			    				<span class="low">Branding</span>
+			    				<span class="time">06:20 PM - 06:40 PM</span>
+			    				<span class="high tlk">Kaveri G</span>
+			    				<span class="low">Art Director/Illustrator</span>
 		    				</div>
 		    				<div class="event_ls">
-			    				<span class="time">14:30</span>
-			    				<span class="high tlk">TBA</span>
-			    				<span class="low">TBA</span>
+			    				<span class="time">06:40 PM - 07:00 PM</span>
+			    				<span class="high tlk">Jay Dutta</span>
+			    				<span class="low">UI/UX Designer</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
 		    				<div class="sub_hd">
-		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Workshops</span>
+		    					<span class="left">Events</span><span class="sep">|</span><span class="right">Culturals</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">16:30</span>
@@ -328,45 +333,45 @@
 			   		<div class="col col1">
 			   			<div class="speaker">
 							<img src="img/Final_backgrounds/Vilas-Nayak.png" >
-			   				<h4>SOME D00D</h4>
-			   				<span class="des">Co-creater, Farmville</span>
-			   				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse impedit, rerum iure. Voluptate optio corporis accusantium laboriosam nemo distinctio.</p>
+			   				<h4>Vilas Nayak</h4>
+			   				<span class="des">Speed Artist</span>
+			   				<p>As the music reaches its crescendo, so do his brush strokes. Finalist on India’s Got Talent, and currently the leading speed painter in Asia. Vilas does live art shows regularly in the country and abroad.</p>
 			   			</div>
 			   			<div class="speaker">
 			   				<img src="img/Final_backgrounds/Kaveri-Gopalkrishnan.png" >
-			   				<h4>SOME D00D</h4>
-			   				<span class="des">Co-creater, Farmville</span>
+			   				<h4>Kaveri Gopalakrishnan</h4>
+			   				<span class="des">Art Director / Illustrator</span>
 			   				<p>
-			   				<span>Accusamus error animi officia autem nostrum optio accusantium minus minima tempore fugiat quasi aut natus fugit quos facilis odio doloribus.</span>
+			   				<span>A graduate in Animation Film Design from NID, Ahmedabad, she specialises in children’s educational content, preproduction design for animation, art direction for print and publication.</span>
 			   				<span></span></p>
 			   			</div>
 			   		</div><!--
 					--><div class="col col2">
 						<div class="speaker">
 			   				<img src="img/Final_backgrounds/Mark-Skaggs.png" >
-							<h4>SOME D00D</h4>
-							<span class="des">Co-creater, Farmville</span>
-							<p>Eligendi dolorem fugit iste, iusto repellat aspernatur dolore maxime tenetur ipsa incidunt velit ab quidem quis vitae.</p>
+							<h4>Mark Skaggs</h4>
+							<span class="des">Game Designer</span>
+							<p>An industry expert who created games like FarmVille, CityVille, Empires and Allies, Red Alert 2, and more! Formerly at Zynga and currently with Moonfrog Labs, Bangalore as Director of Game Design.</p>
 						</div>
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Jay-Dutta.png" >
-							<h4>SOME D00D</h4>
-							<span class="des">Co-creater, Farmville</span>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore optio nisi nesciunt accusantium obcaecati ullam.</p>
+							<h4>Jay Dutta</h4>
+							<span class="des">UI / UX Designer</span>
+							<p>A design thinker with multiple specialisations, who has built teams, products and brands. Former head of UX design at Flipkart and Adobe. Currently the venture advisor at SAIF partners, IxDA, DLabs at ISB.</p>
 						</div>
 					</div><!--
 					--><div class="col col3">
 						<div class="speaker">
 							<img src="img/Final_backgrounds/Sanya-Malik.png" >
-							<h4>SOME D00D</h4>
-							<span class="des">Co-creater, Farmville</span>
-							<p>Quia vel explicabo vitae, magnam? Quasi quidem nisi fuga atque eos ipsum, soluta distinctio laborum animi aliquam, iusto.</p>
+							<h4>Sania Malik</h4>
+							<span class="des">Branding / UX Designer</span>
+							<p>A NIFT, New Delhi alumni, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.</p>
 						</div>
 						<div class="speaker">
 							<img src="https://www.placecage.com/g/200/200" >
-							<h4>SOME D00D</h4>
-							<span class="des">Co-creater, Farmville</span>
-							<p>Cumque, quasi quis accusantium amet, iste doloremque deleniti velit ad esse quae mollitia perspiciatis modi aspernatur.</p>
+							<h4>Saurabh Srivastava</h4>
+							<span class="des">Research Scientist</span>
+							<p>In Conduent Labs, Saurabh has been managing research projects and building competencies in the areas of human computer interaction, social computing, machine learning, and context-aware computing.</p>
 						</div>
 					</div>
 				</div>
@@ -381,24 +386,28 @@
 		    	</div>
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
-		    		<div class="day1">
-		    			<h3>WORKSHOP TITLE</h3>
+		    		<div class="day11">
+		    			<h3>HANDS ON BAMBOO</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day1">
-		    			<h3>WORKSHOP TITLE</h3>
+		    		<div class="day12">
+		    			<h3>VISUAL ART</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day1">
-		    			<h3>WORKSHOP TITLE</h3>
+		    		<div class="day13">
+		    			<h3>MAPBOX</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day2">
-		    			<h3>WORKSHOP TITLE</h3>
+		    		<div class="day21">
+		    			<h3>DESIGN SPRINT</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
-		    		<div class="day2">
-		    			<h3>WORKSHOP TITLE</h3>
+		    		<div class="day22">
+		    			<h3>BIOMIMICRY</h3>
+		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    		</div>
+		    		<div class="day23">
+		    			<h3>PAPER WORKSHOP</h3>
 		    			<p>Workshop details in brief, can be put into upto two lines.</p>
 		    		</div>
 		    	</div>
@@ -411,7 +420,7 @@
 		   			<P>Get a chance to showcase your work at a prominent platform.
 		   			Dfrost is hosting online contest for digital painting and photography.</P>
 		   			<p><span class="color">The winning entries will be on display at Dfrost, and the winners will bag goodies worth Rs 10,000.</span></p>
-		   			<p>Contests are open till <span class="color">March 16, 11:00pm.</span> All the best.</p>
+		   			<p>Contests are open till <span class="color">March 16, 11:00pm.</span> All the best!</p>
 		   		</div>
 		   		<div class="com_img">
 		   			<a href="#"><img src="img/Final_backgrounds/images/Digital-Painting.png" class="painting" alt=""></a>
@@ -479,7 +488,7 @@
 		   		<img class="extras_cutout_img" src="img/Final_backgrounds/Extras-Holder.svg" alt="">
 		   		<div class="dlabs_cnt">
 		    		<div class="day1">
-		    			<img src="img/Final_backgrounds/Extras-Image-Holder.svg">
+		    			<img src="img/dgallery.png">
 		    			<div class="content">
 		    				<h3>dGALLERY</h3>
 		    				<p>Design exhibition by Nidians<br>
@@ -488,21 +497,21 @@
 		    			</div>
 		    		</div>
 		    		<div class="day1">
-		    			<img src="img/Final_backgrounds/Extras-Image-Holder.svg">
+		    			<img src="img/dlounge.png">
 		    			<div class="content">
 		    				<h3>dLOUNGE</h3>
 		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
-		    			<img src="img/Final_backgrounds/Extras-Image-Holder.svg">
+		    			<img src="img/dstall.png">
 		    			<div class="content">
 		    				<h3>dSTALL</h3>
 		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
-		    			<img src="img/Final_backgrounds/Extras-Image-Holder.svg">
+		    			<img src="img/dstore.png">
 		    			<div class="content">
 		    				<h3>dSTORE</h3>
 		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
