Content for Dlabs
Dfrost> Graphics> Social Media> dLabs

--- a/index.html
+++ b/index.html
@@ -387,28 +387,34 @@
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
 		    		<div class="day11">
-		    			<h3>HANDS ON BAMBOO</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<h3>MAKE WITH BAMBOO</h3>
+		    			<p>NID Centre for Bamboo Initiatives, Bangalore</p>
+		    			<p>Bamboo as a material is being creatively used in various applications. The workshop will give you a quick understanding on bamboo and its usage, through making a simple product.</p>
 		    		</div>
 		    		<div class="day12">
-		    			<h3>VISUAL ART</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<h3>LOST IN COLOUR</h3>
+		    			<p>Gregor Strutz</p>
+		    			<p>Graphic designer from Germany takes a workshop on seeing the world through different eyes, allowing us to see different people, and their different needs, in a clearer light.</p>
 		    		</div>
 		    		<div class="day13">
-		    			<h3>MAPBOX</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<h3>FUTURISTIC MAP DESIGN</h3>
+		    			<p>Mapbox Team, Bangalore</p>
+		    			<p>This workshop is a concise and comprehensive look into map building. Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques.</p>
 		    		</div>
 		    		<div class="day21">
 		    			<h3>DESIGN SPRINT</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<p>Sures Kumar</p>
+		    			<p>An NID and Royal College of Art graduate shares his experiments in hacking design sprints. Participants will be exposed to the anatomy of such sprints, and will be equiped to customise their own.</p>
 		    		</div>
 		    		<div class="day22">
 		    			<h3>BIOMIMICRY</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<p>Biomimicry India Network Team, Bangalore</p>
+		    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to many of today’s human problems will be explored during this workshop through case studies and hands-on exercises.</p>
 		    		</div>
 		    		<div class="day23">
-		    			<h3>PAPER WORKSHOP</h3>
-		    			<p>Workshop details in brief, can be put into upto two lines.</p>
+		    			<h3>PAPER ENGINEERING</h3>
+		    			<p>Arun Desai, Studio Chitte, Bangalore</p>
+		    			<p>Paper is a simple, yet dynamic and versatile material. In this workshop, unfold your creativity and learn how to manipulate paper into absolutely anything you can imagine.</p>
 		    		</div>
 		    	</div>
 		    	
