Content team gave shit, we correcting shit
Content team gave shit, we correcting shit

--- a/index.html
+++ b/index.html
@@ -178,23 +178,23 @@
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">10:30 AM - 01:00 PM</span>
-			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth/Jigna &amp; team</span>
+			    				<span class="high lab">Make with Bamboo</span>
+			    				<span class="low">NID Centre for Bamboo Initiatives, Bangalore</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">11:00 AM - 01:00 PM</span>
-			    				<span class="high lab">Visual Art</span>
-			    				<span class="low">Gregor Strutz, INKL GmbH</span>
+			    				<span class="high lab">Lost in Colour</span>
+			    				<span class="low">Gregor Strutz, INKL GmbH, Berlin</span>
 		    				</div>
 		    				<div class="event_ls">			    				
 			    				<span class="time">02:00 PM - 04:00 PM</span>
-			    				<span class="high lab">Hands on Bamboo</span>
-			    				<span class="low">CS Susanth/Jigna &amp; team</span>
+			    				<span class="high lab">Make with Bamboo</span>
+			    				<span class="low">NID Centre for Bamboo Initiatives, Bangalore</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">02:00 PM - 04:00 PM</span>
-			    				<span class="high lab">Mapbox</span>
-			    				<span class="low">TBA</span>
+			    				<span class="high lab">Futuristic Map Design</span>
+			    				<span class="low">Mapbox Team, Bangalore</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -253,17 +253,17 @@
 		    				<div class="event_ls">
 			    				<span class="time">11:00 AM - 01:00 PM</span>
 			    				<span class="high lab">Design Sprint</span>
-			    				<span class="low">Sures Kumar</span>
+			    				<span class="low">Sures Kumar, Google</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">11:00 AM - 01:00 PM</span>
 			    				<span class="high lab">Biomimicry</span>
-			    				<span class="low">Seema Anand &amp; Prashant Dhawan</span>
+			    				<span class="low">Biomimicry India Network Team, Bangalore</span>
 		    				</div>
 		    				<div class="event_ls">
 			    				<span class="time">02:00 PM - 04:00 PM</span>
-			    				<span class="high lab">Paper Workshop</span>
-			    				<span class="low">Arun Desai</span>
+			    				<span class="high lab">Paper Engineering</span>
+			    				<span class="low">Arun Desai, Studio Chitte, Bangalore</span>
 		    				</div>
 		    			</div>
 		    			<div class="schdl_cnt">
@@ -533,6 +533,10 @@
 		   	<section id="partners" class="partners">
 		   		<div class="partner_cnt">
 		   			<h2>PARTNERS</h2>
+		   			<div class="partner_pics">
+		   				<img src="img/partners/wacom.png">
+		   				<img src="img/partners/tyrocare.png">
+		   			</div>
 		   		</div>
 		   	</section>
 		   	<!--/PARTNERS-->
