--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
 				<div class="register_btn"><a href="#">REGISTER NOW</a></div>
 					
 				<div>
-					<div id="date">18 &amp; 19 March</div>
-					<div id="venue">National Institute of Design, Bangalore</div>
+					<div id="date">18 &amp; 19 March | National Institute of Design, Bangalore</div>
+					<!-- <div id="venue">National Institute of Design, Bangalore</div> -->
 					<div class="ticket_sale">
-						<p>Grab your tickets by</p>
+						<p>Grab your tickets within</p>
 						<!-- Countdown Timer -->
 						<div id="clockdiv">
 							  <div>
