Fixed more shit

--- a/index.html
+++ b/index.html
@@ -387,33 +387,27 @@
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
 		    		<div class="day11">
-		    			<h3>MAKE WITH BAMBOO</h3>
-		    			<p>NID Centre for Bamboo Initiatives, Bangalore</p>
-		    			<p>Bamboo as a material is being creatively used in various applications. The workshop will give you a quick understanding on bamboo and its usage, through making a simple product.</p>
+		    			<h3>MAKE WITH BAMBOO <span><p>&mdash; NID Centre for Bamboo Initiatives, Bangalore</p></span></h3>
+		    			<p>Bamboo as a material is being creatively used in various areas. The workshop will give you a quick understanding on its usage, through making a simple product.</p>
 		    		</div>
 		    		<div class="day12">
-		    			<h3>LOST IN COLOUR</h3>
-		    			<p>Gregor Strutz</p>
+		    			<h3>LOST IN COLOUR <span><p>&mdash; Gregor Strutz</p></span></h3>
 		    			<p>Graphic designer from Germany takes a workshop on seeing the world through different eyes, allowing us to see different people, and their different needs, in a clearer light.</p>
 		    		</div>
 		    		<div class="day13">
-		    			<h3>FUTURISTIC MAP DESIGN</h3>
-		    			<p>Mapbox Team, Bangalore</p>
-		    			<p>This workshop is a concise and comprehensive look into map building. Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques.</p>
+		    			<h3>FUTURISTIC MAP DESIGN <span><p>&mdash; Mapbox Team, Bangalore</p></span></h3>
+		    			<p>Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques. A concise and comprehensive look into map building.</p>
 		    		</div>
 		    		<div class="day21">
-		    			<h3>DESIGN SPRINT</h3>
-		    			<p>Sures Kumar</p>
-		    			<p>An NID and Royal College of Art graduate shares his experiments in hacking design sprints. Participants will be exposed to the anatomy of such sprints, and will be equiped to customise their own.</p>
+		    			<h3>DESIGN SPRINT <span><p>&mdash; Sures Kumar</p></span></h3>
+		    			<p>An NID and Royal College of Art graduate shares his experiments in hacking design sprints. Participants will be exposed to the anatomy of such sprints, and will be equipped to customise their own.</p>
 		    		</div>
 		    		<div class="day22">
-		    			<h3>BIOMIMICRY</h3>
-		    			<p>Biomimicry India Network Team, Bangalore</p>
+		    			<h3>BIOMIMICRY <span><p>&mdash; Biomimicry India Network Team, Bangalore</p></span></h3>
 		    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to many of today’s human problems will be explored during this workshop through case studies and hands-on exercises.</p>
 		    		</div>
 		    		<div class="day23">
-		    			<h3>PAPER ENGINEERING</h3>
-		    			<p>Arun Desai, Studio Chitte, Bangalore</p>
+		    			<h3>PAPER ENGINEERING <span><p>&mdash; Arun Desai, Studio Chitte, Bangalore</p></span></h3>		
 		    			<p>Paper is a simple, yet dynamic and versatile material. In this workshop, unfold your creativity and learn how to manipulate paper into absolutely anything you can imagine.</p>
 		    		</div>
 		    	</div>
@@ -497,30 +491,28 @@
 		    			<img src="img/dgallery.png">
 		    			<div class="content">
 		    				<h3>dGALLERY</h3>
-		    				<p>Design exhibition by Nidians<br>
-		    					18th - 19th March, 10am - 5pm</p>
-		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
+		    				<p>A showcase of the things we craft with utmost love at NID Bangalore. Five great exhibits from our five disciplines – Design for Retail Experience, Digital Game Design, Information Design, Interaction Design, Universal Design.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
 		    			<img src="img/dlounge.png">
 		    			<div class="content">
 		    				<h3>dLOUNGE</h3>
-		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
+		    				<p>For your visual pleasure, NID is screening documentaries and movies all day. Grab a bite, sink into that chair and prepare for a crash course on design.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
 		    			<img src="img/dstall.png">
 		    			<div class="content">
 		    				<h3>dSTALL</h3>
-		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
+		    				<p>Skipped lunch because you were too engrossed in design mania? Worry not, dStall has you covered. You might want to hurry though, food rarely lasts at NID.</p>
 		    			</div>
 		    		</div>
 		    		<div class="day1">
 		    			<img src="img/dstore.png">
 		    			<div class="content">
 		    				<h3>dSTORE</h3>
-		    				<p>An exhibition/sale of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
+		    				<p>An exhibition of souvenirs and bespoke products crafted right here at NID. Take home some uniquely designed, handcrafted love.</p>
 		    			</div>
 		    		</div>
 		    		
@@ -546,12 +538,14 @@
 		   		<div class="venue_cnt">
 		   			<h2>VENUE</h2>
 		   			<p class="content">
-		   				<span>National Institute of Design, R&amp;D Campus</span><br>
+		   				<i class="fa fa-map-marker"></i>
+		   				<span>
+		   				National Institute of Design, R&amp;D Campus</span><br>
 		   				12, HMT Link Road (off Tumkur Road),<br>
 		   				Peenya, Bengaluru - 560022
 					</p>
-					<p>+91 96755343520</p>
-					<p>www.nid.edu</p>
+					<p><i class="fa fa-phone"></i>+91 96755343520</p>
+					<p><i class="fa fa-globe"></i>www.nid.edu</p>
 		   		</div>
 		   		<img class="map" src="img/Final_backgrounds/mapdf.png">
 		   		
