responsive fixes - till online competitions

--- a/index.html
+++ b/index.html
@@ -386,29 +386,47 @@
 		    	</div>
 		    	<img class="dlabs_cutout_img" src="img/Final_backgrounds/dLabs-Holder.svg" alt="">
 		    	<div class="dlabs_cnt">
-		    		<div class="day11">
-		    			<h3>MAKE WITH BAMBOO <span><p>&mdash; NID Centre for Bamboo Initiatives, Bangalore</p></span></h3>
-		    			<p>Bamboo as a material is being creatively used in various areas. The workshop will give you a quick understanding on its usage, through making a simple product.</p>
+		    		<div class="day11 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>MAKE WITH BAMBOO <span><p>&mdash; NID Centre for Bamboo Initiatives</p></span></h3>
+			    			<p>Bamboo as a material is being creatively used in various areas. The workshop will give you a quick understanding on its usage, through making a simple product.</p>
+		    			</div>
 		    		</div>
-		    		<div class="day12">
-		    			<h3>LOST IN COLOUR <span><p>&mdash; Gregor Strutz</p></span></h3>
-		    			<p>Graphic designer from Germany takes a workshop on seeing the world through different eyes, allowing us to see different people, and their different needs, in a clearer light.</p>
+		    		<div class="day12 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>LOST IN COLOUR <span><p>&mdash; Gregor Strutz</p></span></h3>
+			    			<p>Graphic designer from Germany takes a workshop on seeing the world through different eyes, allowing us to see different people, and their different needs, in a clearer light.</p>
+		    			</div>
 		    		</div>
-		    		<div class="day13">
-		    			<h3>FUTURISTIC MAP DESIGN <span><p>&mdash; Mapbox Team, Bangalore</p></span></h3>
-		    			<p>Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques. A concise and comprehensive look into map building.</p>
+		    		<div class="day13 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>FUTURISTIC MAP DESIGN <span><p>&mdash; Mapbox Team, Bangalore</p></span></h3>
+			    			<p>Learn to create custom map datasets using crowdsourced data and different cartographic styling techniques. A concise and comprehensive look into map building.</p>
+		    			</div>
 		    		</div>
-		    		<div class="day21">
-		    			<h3>DESIGN SPRINT <span><p>&mdash; Sures Kumar</p></span></h3>
-		    			<p>An NID and Royal College of Art graduate shares his experiments in hacking design sprints. Participants will be exposed to the anatomy of such sprints, and will be equipped to customise their own.</p>
+		    		<div class="day21 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>DESIGN SPRINT <span><p>&mdash; Sures Kumar</p></span></h3>
+			    			<p>An NID and Royal College of Art graduate shares his experiments in hacking design sprints. Participants will be exposed to their anatomy, and will be equipped to customise their own.</p>
+		    			</div>
 		    		</div>
-		    		<div class="day22">
-		    			<h3>BIOMIMICRY <span><p>&mdash; Biomimicry India Network Team, Bangalore</p></span></h3>
-		    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to many of today’s human problems will be explored during this workshop through case studies and hands-on exercises.</p>
+		    		<div class="day22 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>BIOMIMICRY <span><p>&mdash; Biomimicry India Network Team, Bangalore</p></span></h3>
+			    			<p>Biomimicry’s demonstrated ability to provide sustainable solutions to many of today’s human problems will be explored during this workshop through case studies and hands-on exercises.</p>
+		    			</div>
 		    		</div>
-		    		<div class="day23">
-		    			<h3>PAPER ENGINEERING <span><p>&mdash; Arun Desai, Studio Chitte, Bangalore</p></span></h3>		
-		    			<p>Paper is a simple, yet dynamic and versatile material. In this workshop, unfold your creativity and learn how to manipulate paper into absolutely anything you can imagine.</p>
+		    		<div class="day23 day">
+		    			<img src="http://www.placehold.it/160x160" alt="">
+		    			<div class="content">
+			    			<h3>PAPER ENGINEERING <span><p>&mdash; Arun Desai, Studio Chitte, Bangalore</p></span></h3>		
+			    			<p>Paper is a simple, yet dynamic and versatile material. In this workshop, unfold your creativity and learn how to manipulate paper into absolutely anything you can imagine.</p>
+		    			</div>
 		    		</div>
 		    	</div>
 		    	
