--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>NID Dfrost | March 18-19, 2017</title>
+	<meta name="description" content="NID , Bengaluru , Event , Design , Fest , Dfrost ,">  
+	<meta name="author" content="">
 	<link rel="icon" type="image/ico" href="../img/favicon_dfrost.png">
 	<!-- Bootstrap and MDB import -->
-	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.3.0/css/mdb.min.css" rel="stylesheet">  -->
 	<!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" rel="stylesheet"> -->
 	<!-- <link href="css/rippler.min.css" rel="stylesheet"> -->
@@ -63,7 +65,7 @@
 							<a href="#partners" title="partners">Partners</a>
 						</li>
 						<li>
-							<a href="#contact" title="contact">Contact</a>
+							<a href="#venue" title="contact">Contact</a>
 						</li>
 						</div>
 					</ul>
@@ -94,7 +96,7 @@
 					<a href="#partners" title="partners">Partners</a>
 				</li>
 				<li>
-					<a href="#contact" title="contact">Contact</a>
+					<a href="#venue" title="contact">Contact</a>
 				</li>
 			</ul>
 			</div>
@@ -108,8 +110,21 @@
 			
 			<div class="dfrost-logo"></div>
 			<div class="options">
-				<div class="register_btn"><a href="#">REGISTER NOW</a></div>
-					
+				<div class="register_btn"><a href="https://in.explara.com/widget-new/dfrost-2017" target="popupModal2">REGISTER NOW</a></div>
+				
+				<div id="popupModal2" class="modal hide fade" tabindex="-1" role="dialog">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">×</button>
+							<h3>Title</h3>
+					</div>
+					<div class="modal-body">
+				      <iframe src="" style="zoom:0.60" width="99.6%" height="250" frameborder="0"></iframe>
+					</div>
+					<div class="modal-footer">
+						<button class="btn" data-dismiss="modal">OK</button>
+					</div>
+				</div>
+
 				<div>
 					<div id="date">18 &amp; 19 March | National Institute of Design, Bangalore</div>
 					<!-- <div id="venue">National Institute of Design, Bangalore</div> -->
@@ -368,7 +383,7 @@
 							<p>A NIFT, New Delhi alumni, Sanya Malik is currently working as a UX designer at the leading software company Directi, Bangalore. She also has the app Healthmonk to her name.</p>
 						</div>
 						<div class="speaker">
-							<img src="https://www.placecage.com/g/200/200" >
+							<img src="img/Final_backgrounds/Saurabh-Shrivastava.png" >
 							<h4>Saurabh Srivastava</h4>
 							<span class="des">Research Scientist</span>
 							<p>In Conduent Labs, Saurabh has been managing research projects and building competencies in the areas of human computer interaction, social computing, machine learning, and context-aware computing.</p>
@@ -526,8 +541,8 @@
 		   		<div class="partner_cnt">
 		   			<h2>PARTNERS</h2>
 		   			<div class="partner_pics">
-		   				<img src="img/partners/wacom.png">
-		   				<img src="img/partners/tyrocare.png">
+		   				<img src="img/sp-wacom.png">
+		   				<img src="img/sp-thyrocare.png">
 		   			</div>
 		   		</div>
 		   	</section>
@@ -601,6 +616,21 @@
 <script type="text/javascript" src="js/jquery.rippler.min.js"></script>
 <script type="text/javascript" src="js/jquery.combinedScroll.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
+<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	
+	  ga('create', 'UA-34589300-1', 'auto');
+	  ga('send', 'pageview');
+	
+</script>
+<script type="text/javascript">
+	$('#myModal').on('shown.bs.modal', function () {
+  	$('#myInput').focus()})
+</script>
+
 
 </body>
 </html>
